<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/recently_viewed_item_image"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/recently_viewed_items_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card1" />

    <TextView
        android:id="@+id/recently_viewed_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recently_viewed_items_name"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/recently_viewed_item_image"
        app:layout_constraintTop_toTopOf="@+id/recently_viewed_item_image" />

    <TextView
        android:id="@+id/recently_viewed_item_desc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/recently_viewed_items_desc"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/recently_viewed_item_image"
        app:layout_constraintTop_toBottomOf="@+id/recently_viewed_item_name" />

    <TextView
        android:id="@+id/recently_viewed_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recently_viewed_items_price"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/recently_viewed_item_image"
        app:layout_constraintTop_toBottomOf="@+id/recently_viewed_item_desc" />

    <TextView
        android:id="@+id/recently_viewed_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recently_viewed_items_quantity"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/recently_viewed_item_image"
        app:layout_constraintTop_toBottomOf="@+id/recently_viewed_item_price" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/shopping_cart"
        app:layout_constraintBottom_toBottomOf="@+id/recently_viewed_item_image"
        app:layout_constraintEnd_toEndOf="@+id/recently_viewed_item_image"
        app:srcCompat="@drawable/add_shopping_cart" />
</androidx.constraintlayout.widget.ConstraintLayout>